@@ -16,6 +16,7 @@ BA   1- plotlines flag was ignored
      8- t=mfTheta();mfslashexpansion(mfinit(t),t,[0,1;-1,0],1,1) -> error
      9- poldisc(x^4 + 8/y*x) -> type error in Q_divi_to_int [#2157]
     10- T=mfTheta(); mfeval(mfinit(T),T,I/10) -> wrong sign
+    10- mfslashexpansion(mf,F,huge matrix,...) -> overflow
 
   Changed
      1- [libpari] rename rootsof1 -> nfrootsof1
